db queries + info

--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -11,5 +11,5 @@
     Esta mentalidad me ha llevado a desarrollar varios proyectos personales, algunos de los cuales menciono en la sección correspondiente, 
     que han sido clave para mi crecimiento tanto personal como profesional.
   </p>
-
+  <div class="cursor-blink"></div>
 </section>
