--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,7 @@
                 hx-target="#content"
                 hx-swap="innerHTML"
                 hx-trigger="click"
-                >job</a
+                >education</a
               >
             </li>
             <li>
