--- a/templates/profession.html
+++ b/templates/profession.html
@@ -1,14 +1,27 @@
 <section id="content" class="terminal-section active terminal-output">
-  <h2>A qué me dedico</h2>
+  <h2>Formación Profesional</h2>
   <p>
-    Especialista en desarrollo backend con Rust y tecnologías de alto
-    rendimiento. Mi enfoque se centra en crear APIs robustas, seguras y
-    eficientes.
+    Desde el Bachillerato, me especialicé en tecnología industrial, adquiriendo experiencia en áreas como programación con Arduino, diseño asistido por ordenador con AutoCAD y el uso de otras herramientas técnicas.
+  </p>
+  <p>
+    Después de superar las pruebas de acceso a la universidad, comencé un grado en Economía. Sin embargo, al cabo de un año, me di cuenta de que ese camino no aprovechaba plenamente mis intereses y habilidades, por lo que decidí redirigir mi carrera.
+  </p>
+  
+  <p>
+    Tras una profunda reflexión, opté por estudiar Ingeniería Telemática en la Universidad Politécnica de Cartagena, donde he recibido una formación integral en electrónica, física y telecomunicaciones. A lo largo de mis estudios, he trabajado con diversas tecnologías, entre las que destaco:
   </p>
   <ul>
-    <li>Desarrollo de aplicaciones web con Actix</li>
-    <li>Optimización de rendimiento en sistemas críticos</li>
-    <li>Implementación de soluciones concurrentes seguras</li>
-    <li>Creación de microservicios escalables</li>
+    <li><strong>AutoCAD</strong>: Diseño de piezas con alta precisión.</li>
+    <li><strong>OrCAD</strong>: Simulación y desarrollo de circuitos electrónicos.</li>
+    <li><strong>Python, Java, MATLAB y SQL</strong>: Aplicación en áreas como machine learning, ciencia de datos, optimización matemática, gestión de bases de datos y desarrollo de comunicaciones con Sockets TCP y UDP.</li>
+    <li><strong>Simulink</strong>: Diseño y análisis de filtros de señales, facilitando la visualización de transmisiones de datos.</li>
+    <li><strong>Linux</strong>: Administración de servidores y programación de scripts en Bash, utilizados en simulación de tráfico y ciberseguridad.</li>
   </ul>
+  <p>
+    Estas herramientas han sido clave tanto en mi formación académica como en el desarrollo de proyectos personales.
+  </p>
+  <p>
+    Además, durante este tiempo de reflexión, decidí perfeccionar mi inglés, lo que me permitió obtener el certificado C1 de Cambridge, un paso importante en mi crecimiento personal y profesional.
+  </p>
+  <div class="cursor-blink"></div>
 </section>
